# jvm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
jvm/: Cargo.toml
jvm/src/: bytecode.rs  execution.rs  heap.rs  lib.rs  linker.rs  main.rs  native.rs  tests.rs  thread.rs
jvm/src/classfile/: mod.rs  resolved.rs
jvm/src/env/: aot.rs  mod.rs
jvm/src/env/native/: heap.rs  mod.rs
jvm/src/env/wasm/: cfg.rs  compile.rs  mod.rs  native.rs  scc.rs  stub.rs  test.rs  wasm.rs
jvm/src/env/wasm/compile/: mod.rs  stub.rs
jvm/src/jit/: compile.rs  mod.rs  wasm.rs
jvm/web/: index.html  worker.js
jvm_types/: Cargo.toml
jvm_types/src/: lib.rs
parse_macro/: Cargo.toml
parse_macro/src/: lib.rs
