[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
jvm_types = { path = "../jvm_types" }
parse_macro = { path = "../parse_macro" }
mutf8 = "0.5.0"
discrim = "0.1.1"
bitflags = "2.3.2"
parking_lot = { version = "0.12.1" }
indexmap = "2.0.0"
once_cell = "1.18.0"
colored = "2.0.4"
arrayvec = "0.7.4"
futures-executor = "0.3.30"
highway = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'DateTimeValue',
    'console'
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1"
wasm-encoder = "0.40.0"
wasmprinter = "0.2"
wasmparser = "0.120.0"
async-channel = "2.1.1"
arc-swap = "1.6.0"

[lib]
crate-type = ["cdylib", "rlib"]